# Palettize

./: LICENSE  Palettize.cabal  README.md  palette-apply.cabal  shell.nix
app/: Main.hs
src/: Lib.hs
